2008-04-17  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/Parser.cs,
	  MonoDevelop.Xml.StateEngine/XmlClosingTagState.cs,
	  MonoDevelop.Xml.StateEngine/CDataState.cs,
	  MonoDevelop.Xml.StateEngine/XmlTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlSpecialTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlTagNameState.cs,
	  MonoDevelop.Xml.StateEngine/State.cs,
	  MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs,
	  MonoDevelop.Xml.StateEngine/XmlFreeState.cs,
	  MonoDevelop.Xml.StateEngine/XmlCommentState.cs,
	  MonoDevelop.Xml.StateEngine/XmlMalformedTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlAttributeState.cs: Add new XML state
	  engine for triggering autocompletion and indentation in XML-like
	  languages.
	* Makefile.am, MonoDevelop.XmlEditor.mdp: Updated.

2008-04-16  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs: Track API change.
	  Remove char code translation hack.

2008-04-11  Michael Hutchinson <mhutchinson@novell.com>

	* Makefile.am: Depend on MonoDevelop.SourceEditor2.dll; its build number 
	  auto-increments, so whenever it changes, we need to rebuild this.

2008-04-08  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.XmlEditor.Completion/XmlTagCompletionData.cs,
	  MonoDevelop.XmlEditor.Completion/ClosingBracketCompletionDataProvider.cs:
	  Split the completion data class into a separated file and
	  generalised it a little.
	* MonoDevelop.XmlEditor.Completion/ILazilyLoadedProvider.cs,
	  MonoDevelop.XmlEditor.Completion/XmlSchemaCompletionData.cs: Rework
	  lazy loading, with forced advance-loading via an interface.
	* MonoDevelop.XmlEditor.Completion/EmptyXmlCompletionProvider.cs:
	  Implemented an empty completion provider.
	* Makefile.am, MonoDevelop.XmlEditor.mdp: Updated.

2008-04-03  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* MonoDevelop.XmlEditor.Gui/XmlSchemasPanelWidget.cs: Workaround bug in mono